--- a/Kconfig
+++ b/Kconfig
@@ -218,6 +218,12 @@ menu "seL4 System"
             depends on ARM_CORTEX_A15
             help
                 Support for ALLWINNERA20 platform (CUBIETRUCK).
+
+        config PLAT_QEMU_RISCV
+            bool "QEMU_RISCV"
+            depends on ARCH_RISCV
+            help
+                Support for riscv-softmmu platform
     endchoice
 
 source "$KERNEL_PATH/src/arch/arm/Kconfig"
