--- a/Kconfig
+++ b/Kconfig
@@ -177,6 +177,12 @@ config ARCH_IA32
             depends on ARM_CORTEX_A15
             help
                 Support for ALLWINNERA20 platform (CUBIETRUCK).
+
+        config PLAT_QEMU_RISCV
+            bool "QEMU_RISCV"
+            depends on ARCH_RISCV
+            help
+                Support for riscv-softmmu platform
     endchoice
 
         config PLAT_QEMU_RISCV
