Add registers definitions

--- a/src/arch/riscv/Makefile
+++ b/src/arch/riscv/Makefile
@@ -2,4 +2,11 @@ DIRECTORIES += src/arch/riscv/
 
 include ${SOURCE_ROOT}/src/arch/riscv/object/Makefile
 
+#include ${SOURCE_ROOT}/src/arch/riscv/api/Makefile
+#include ${SOURCE_ROOT}/src/arch/riscv/object/Makefile
+#include ${SOURCE_ROOT}/src/arch/riscv/kernel/Makefile
+#include ${SOURCE_ROOT}/src/arch/riscv/model/Makefile
+include ${SOURCE_ROOT}/src/arch/riscv/machine/Makefile
+#include ${SOURCE_ROOT}/src/arch/riscv/fastpath/Makefile
+
 ARCH_ASM_SOURCES += head.S
