Add IRQ stubs for qemu_riscv platform

--- a/src/plat/qemu_riscv/machine/Makefile
+++ b/src/plat/qemu_riscv/machine/Makefile
@@ -10,7 +10,7 @@
 
 DIRECTORIES += src/plat/${PLAT}/machine
 
-#PLAT_C_SOURCES += machine/hardware.c
+PLAT_C_SOURCES += machine/hardware.c
 
 ifdef DEBUG
    # PLAT_C_SOURCES += machine/io.c
