--- a/src/plat/qemu_riscv/machine/Makefile
+++ b/src/plat/qemu_riscv/machine/Makefile
@@ -13,5 +13,5 @@ DIRECTORIES += src/plat/${PLAT}/machine
 PLAT_C_SOURCES += machine/hardware.c
 
 ifdef DEBUG
-   # PLAT_C_SOURCES += machine/io.c
+    PLAT_C_SOURCES += machine/io.c
 endif
