--- a/src/arch/riscv/Makefile
+++ b/src/arch/riscv/Makefile
@@ -4,7 +4,7 @@ include ${SOURCE_ROOT}/src/arch/riscv/object/Makefile
 
 #include ${SOURCE_ROOT}/src/arch/riscv/api/Makefile
 #include ${SOURCE_ROOT}/src/arch/riscv/object/Makefile
-#include ${SOURCE_ROOT}/src/arch/riscv/kernel/Makefile
+include ${SOURCE_ROOT}/src/arch/riscv/kernel/Makefile
 #include ${SOURCE_ROOT}/src/arch/riscv/model/Makefile
 include ${SOURCE_ROOT}/src/arch/riscv/machine/Makefile
 #include ${SOURCE_ROOT}/src/arch/riscv/fastpath/Makefile
