Almost there to get stubbed version of kernel.elf

--- a/src/arch/riscv/Makefile
+++ b/src/arch/riscv/Makefile
@@ -2,7 +2,7 @@ DIRECTORIES += src/arch/riscv/
 
 include ${SOURCE_ROOT}/src/arch/riscv/object/Makefile
 
-#include ${SOURCE_ROOT}/src/arch/riscv/api/Makefile
+include ${SOURCE_ROOT}/src/arch/riscv/api/Makefile
 #include ${SOURCE_ROOT}/src/arch/riscv/object/Makefile
 include ${SOURCE_ROOT}/src/arch/riscv/kernel/Makefile
 #include ${SOURCE_ROOT}/src/arch/riscv/model/Makefile
