--- a/src/arch/riscv/object/Makefile
+++ b/src/arch/riscv/object/Makefile
@@ -10,4 +10,4 @@
 
 DIRECTORIES += src/arch/riscv/object
 
-#ARCH_C_SOURCES += object/interrupt.c object/objecttype.c object/tcb.c
+ARCH_C_SOURCES += object/tcb.c object/interrupt.c object/objecttype.c 
