--- a/Kconfig
+++ b/Kconfig
@@ -179,6 +179,12 @@ config ARCH_IA32
                 Support for ALLWINNERA20 platform (CUBIETRUCK).
     endchoice
 
+        config PLAT_QEMU_RISCV
+            bool "QEMU_RISCV"
+            depends on ARCH_RISCV
+            help
+                Support for riscv-softmmu platform
+
 source "$KERNEL_PATH/src/arch/arm/Kconfig"
 source "$KERNEL_PATH/src/plat/pc99/Kconfig"
 
