--- a/Kconfig
+++ b/Kconfig
@@ -219,11 +219,11 @@ menu "seL4 System"
             help
                 Support for ALLWINNERA20 platform (CUBIETRUCK).
 
-        config PLAT_QEMU_RISCV
-            bool "QEMU_RISCV"
+        config PLAT_SPIKE
+            bool "PLAT_SPIKE"
             depends on ARCH_RISCV
             help
-                Support for riscv-softmmu platform
+                Support for riscv/spike platform
     endchoice
 
 source "$KERNEL_PATH/src/arch/arm/Kconfig"
