--- a/src/arch/riscv/Makefile
+++ b/src/arch/riscv/Makefile
@@ -9,4 +9,4 @@ include ${SOURCE_ROOT}/src/arch/riscv/model/Makefile
 include ${SOURCE_ROOT}/src/arch/riscv/machine/Makefile
 #include ${SOURCE_ROOT}/src/arch/riscv/fastpath/Makefile
 
-ARCH_ASM_SOURCES += head.S halt.S traps.S
+ARCH_ASM_SOURCES += head.S halt.S traps.S idle.S
